--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/42d69n83d23/auburn-hills/?unit=us" data-label_1="Auburn Hills" data-label_2="Michigan" data-icons="Climacons" data-theme="gray" data-basecolor="#282a36" data-highcolor="#EA878C" data-lowcolor="#66AADA" data-suncolor="#EA878C" data-raincolor="#66AADA" >Auburn Hills Michigan</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/42d69n83d23/auburn-hills/?unit=us" data-label_1="Auburn Hills" data-label_2="Michigan" data-icons="Climacons" data-theme="gray" data-basecolor="" data-highcolor="#EA878C" data-lowcolor="#66AADA" data-suncolor="#EA878C" data-raincolor="#66AADA" >Auburn Hills Michigan</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
